Plantillas base y conexion a base de datos

--- a/src/pages/contact-info/contact-info.html
+++ b/src/pages/contact-info/contact-info.html
@@ -14,11 +14,9 @@
   <ion-card style="background-color: darkgoldenrod;">
     <img src="{{avatar}}">
       <ion-card-content>
-        <h2>{{correo}}</h2>
-        <h3>{{telefono}}</h3>
-        <p>{{facebook}}</p>
-        <p>{{instagram}}</p>
-        <p>{{twitter}}</p>
+        <h2>{{marca}}</h2>
+        <h3>{{serie}}</h3>
+        <p>{{precio}}</p>
       </ion-card-content>
   </ion-card>
 </ion-content>
